# rustcam

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.sh  cargo-linux  cargo-nuttx
.cargo/: config.toml
.github/workflows/: build.yml
app/: .gitignore  Cargo.toml  Make.defs  Makefile  xtensa-esp32s3-nuttx-elf.json
app/.cargo/: config.toml
app/platform/nuttx/: Make.defs  Makefile
app/src/: lib.rs  main.rs
app/src/hal/heap/: linux.rs
apps/hello/: Cargo.toml
apps/hello/src/: lib.rs  main.rs
apps/rustcam/: Cargo.toml
apps/rustcam/platform/nuttx/: Make.defs  Makefile
apps/rustcam/src/: lib.rs
apps/rustcam/src/hal/heap/: none.rs  nuttx.rs
apps/wifi_test/: Cargo.toml
apps/wifi_test/src/: lib.rs
docs/: ESP32S3_Camera_Driver_Changes.md  nuttx-wifi-issue.md
hal/: Cargo.toml  lib.rs
hal/ble/: mod.rs  none.rs  nuttx.rs  unix.rs
hal/camera/: linux.rs  mod.rs  none.rs  nuttx.rs
hal/examples/: test_wifi.rs
hal/src/: lib.rs
hal/src/heap/: mod.rs
hal/wifi/: linux.rs  mod.rs  none.rs  nuttx.rs
platform/nuttx/: Kconfig  Make.defs  Makefile  ble_wrapper.c  camera_wrapper.c
platform/nuttx/rustcam/: Kconfig  Make.defs  Makefile
