[package]
name = "rustcam"
version = "0.1.0"
edition = "2021"

[lib]
# staticlib for NuttX, rlib for native binary
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "rustcam"
path = "src/bin/rustcam.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = 'z'
strip = "symbols"
debug = false
overflow-checks = false
debug-assertions = false

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
