[package]
name = "rustcam"
version = "0.1.0"
edition = "2021"

[lib]
# staticlib for NuttX, rlib for native binary
crate-type = ["staticlib", "rlib"]

# Binary auto-detected from src/main.rs (Linux only, NuttX uses --lib)

[features]
default = ["platform-linux"]
platform-linux = ["libc"]
platform-nuttx = []

[dependencies]
libc = { version = "0.2", optional = true }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = 'z'
strip = "symbols"
debug = false
overflow-checks = false
debug-assertions = false
