[package]
name = "rustcam"
version.workspace = true
edition.workspace = true

[lib]
# staticlib for NuttX, rlib for native binary
crate-type = ["staticlib", "rlib"]

# Binary auto-detected from src/main.rs (Linux only, NuttX uses --lib)

[features]
default = ["platform-linux"]
platform-linux = ["libc"]
platform-nuttx = []

[dependencies]
libc = { version = "0.2", optional = true }
