[package]
name = "rustcam"
version.workspace = true
edition.workspace = true

[lib]
# staticlib for NuttX, rlib for native binary
crate-type = ["staticlib", "rlib"]

# Binary auto-detected from src/main.rs (Linux only, NuttX uses --lib)

[features]
default = ["platform-linux"]
platform-linux = ["hal/platform-linux"]
platform-nuttx = ["hal/platform-nuttx"]

[dependencies]
hal = { path = "../../hal", default-features = false }
